--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,7 +51,7 @@ html {
 }
 .navbar {
     display: flex;
-    height: 7rem;
+    height: 6rem;
     /* min-width: 100vh; */
     background: var(--greyLight-1);
     box-shadow: inset 0.2rem 0.2rem 0.8rem var(--greyLight-1),
@@ -73,6 +73,7 @@ html {
 .container {
     min-height: 90vh;
     display: inline-block;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     font-family: "Poppins", sans-serif;
@@ -82,27 +83,29 @@ html {
     /* width: 100rem; */
     /* height: 85rem; */
     border-radius: 1rem;
-    box-shadow: 0.8rem 0.8rem 1.4rem var(--greyLight-2),
+    box-shadow: 0.6rem 0.6rem 1.2rem var(--greyLight-2),
         -0.2rem -0.2rem 1.8rem var(--white);
     padding: 1rem;
     margin: 2rem;
-    display: block;
-    /* grid-template-columns: 17.6rem 19rem 20.4rem; */
-    /* grid-template-rows: repeat(autofit, min-content); */
-    /* grid-column-gap: 1rem; */
-    grid-row-gap: 2.5rem;
+    display: flow-root;
+    /* grid-template-columns: 17.6rem 19rem 20.4rem;
+    grid-template-rows: repeat(autofit, min-content);
+    grid-column-gap: 1rem;
+    grid-row-gap: 2.5rem; */
     align-items: center;
     justify-content: center;
 }
 .second_content {
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
+    justify-content: center;
 }
 .card {
     /* width: 25rem; */
     /* height: 10rem; */
     border-radius: 1rem;
-    box-shadow: 0.4rem 0.4rem 1.4rem var(--greyLight-2),
+    box-shadow: 0.3rem 0.3rem 0.8rem var(--greyLight-2),
         -0.2rem -0.2rem 1.8rem var(--white);
     padding: 1rem;
     margin: 1rem;
@@ -209,7 +212,7 @@ html {
 .btn {
     width: 10rem;
     height: 3.5rem;
-    margin: 12px;
+    margin: 10px;
     border-radius: 1rem;
     box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2),
         -0.2rem -0.2rem 0.5rem var(--white);
@@ -459,8 +462,10 @@ ul {
     align-items: center;
 }
 .search__input {
-    width: 20.4rem;
-    height: 4rem;
+    width: 24.4rem;
+    height: 3.5rem;
+    margin: 10px;
+    padding: 10px;
     border: none;
     border-radius: 1rem;
     font-size: 1.4rem;
@@ -486,7 +491,7 @@ ul {
     height: 2rem;
     position: absolute;
     font-size: 2rem;
-    padding: 0 1rem;
+    padding: 0 2rem;
     display: flex;
     color: var(--greyDark);
     transition: 0.3s ease;
