--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,13 +13,16 @@ a:-webkit-any-link {
     --primary: #6d5dfc;
     --primary-dark: #5b0eeb;
     --white: #fff;
+    --greyLight-0: #e7ebf1;
     --greyLight-1: #e4ebf5;
     --greyLight-2: #c8d0e7;
     --greyLight-3: #bec8e4;
     --greyDark: #7f8cac;
+    --greyDark-0: #9da4b3;
     --greyDark-1: #747f9d;
-    --online: #4ab067;
-    --offline: #f03979;
+    --online: #36d7b7;
+    --offline: #f43477;
+    --spiner: #36d7b7;
 }
 *,
 *::before,
@@ -40,7 +43,7 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     overflow-y: scroll;
-    background: var(--greyLight-1);
+    background: var(--greyLight-0);
 }
 
 .online {
@@ -52,7 +55,8 @@ html {
 .navbar {
     display: flex;
     height: 6rem;
-    /* min-width: 100vh; */
+    min-width: 100vh;
+
     background: var(--greyLight-1);
     box-shadow: inset 0.2rem 0.2rem 0.8rem var(--greyLight-1),
         inset -0.2rem -0.2rem 0.5rem var(--white);
@@ -72,15 +76,15 @@ html {
 }
 .container {
     min-height: 90vh;
-    display: inline-block;
-    flex-direction: row;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: "Poppins", sans-serif;
     background: var(--greyLight-1);
 }
 .component__content {
-    /* width: 100rem; */
+    /* width: 80rem; */
     /* height: 85rem; */
     border-radius: 1rem;
     box-shadow: 0.6rem 0.6rem 1.2rem var(--greyLight-2),
@@ -145,7 +149,20 @@ html {
     justify-content: center;
     list-style-type: none;
 }
-
+.drop__down {
+    justify-content: center;
+    list-style-type: none;
+    background-color: var(--greyLight-1);
+    border-radius: 0.6rem;
+    /* border-color: #858b99; */
+    font-size: 1.2rem;
+    color: var(--greyDark-0);
+    padding: 0.2rem;
+}
+.option {
+    padding: 0.2rem;
+    margin: 0.4rem;
+}
 /* SWITCH */
 .switch {
     grid-column: 0.5;
@@ -153,6 +170,8 @@ html {
     grid-template-columns: repeat(2, min-content);
     grid-gap: 3rem;
     justify-self: center;
+    margin: 1rem;
+    padding: 1rem;
 }
 .switch input {
     display: none;
@@ -423,8 +442,7 @@ ul {
     list-style: none;
 }
 .align-c {
-    display: flex;
-    display: block;
+    display: contents;
     align-items: center;
     justify-content: center;
 }
@@ -607,12 +625,12 @@ ul {
         opacity: 0;
     }
 }
-@media screen and (min-width: 1120px) {
+/* @media screen and (min-width: 1020px) {
     html {
-        font-size: 70%;
+        font-size: 80%;
     }
-}
-@media screen and (max-width: 900px) {
+} */
+@media screen and (max-width: 800px) {
     .navbar {
         font-size: 65%;
     }
@@ -621,7 +639,29 @@ ul {
         justify-content: flex-end;
     }
 }
-/* @media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
+    html {
+        font-size: 60%;
+    }
+    .container {
+        display: block;
+    }
+    .component__content {
+        display: table-caption;
+    }
+    .navbar__content {
+        display: flex;
+        justify-content: flex-end;
+    }
+    .geco-chart {
+        /* width: 460px; */
+        display: flex;
+    }
+}
+@media screen and (max-width: 570px) {
+    html {
+        font-size: 55%;
+    }
     .container {
         display: block;
     }
@@ -633,9 +673,9 @@ ul {
         justify-content: flex-end;
     }
 }
-@media screen and (max-width: 540px) {
+@media screen and (max-width: 390px) {
     html {
-        font-size: 56%;
+        font-size: 88%;
     }
     .container {
         display: block;
@@ -643,8 +683,12 @@ ul {
     .component__content {
         display: table-caption;
     }
-} */
-
+    .navbar__content {
+        display: flex;
+        justify-content: flex-end;
+        min-width: 100vh;
+    }
+}
 /* .online {
     display: none;
 } */
