--- a/styles/globals.css
+++ b/styles/globals.css
@@ -148,8 +148,8 @@ html {
 	box-shadow: 0.4rem 0.4rem 1.4rem var(--greyLight-2);
 }
 .card_box {
-	width: 10rem;
-	height: 8rem;
+	/* width: 12rem; */
+	/* height: 8rem; */
 	border-radius: 1rem;
 	box-shadow: 0.4rem 0.4rem 1.4rem var(--greyLight-2),
 		-0.2rem -0.2rem 1.8rem var(--white), -0.2rem -0.2rem 1.8rem var(--white);
