--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ a:-webkit-any-link {
 	font-family: "Poppins", sans-serif;
 	justify-content: center;
 	align-items: center;
+	font-weight: bold;
 }
 
 :root {
